Fix spacing issue between products leading to overlap

--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -7,12 +7,12 @@
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   z-index: 1;
+  font-size: clamp(14px, 6vw, 32px);
 }
 
 @media only screen and (max-width: 500px) {
   .btn--products {
     width: 33.33%;
-    font-size: clamp(14px, 6vw, 24px);
   }
 }
 
@@ -28,7 +28,7 @@
   width: 275px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
-  margin: 50px 0 10px;
+  margin: 75px 0 10px;
   border-bottom: solid 1px black;
   color: rgba(0, 0, 0, 0.499);
 }
@@ -38,7 +38,8 @@
   flex-wrap: wrap;
   justify-content: space-around;
   row-gap: 25px;
-  max-width: 700px;
+  column-gap: 25px;
+  max-width: 900px;
 }
 
 .Product {
